--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+1999-06-03    <timj@dhcpd7.redhat.com>
+
+	* bsesong.c: fix typo.
+
 1999-05-31    <timj@dhcpd7.redhat.com>
 
 	* bsepcmstream-oss.c (pcm_stream_oss_set_dsp): ignore failing fragment
