--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,89 @@
+Sun Jun 27 10:21:57 1999  Tim Janik  <timj@gtk.org>
+
+	* configure.in: provide program data dir for BEAST data files.
+
+        * autogen.sh: invoke automake with --add-missing
+        
+	* beast-gtk/Makefile.am: autogenerate beastconfigpaths.h, install
+	beast.glr.
+
+	* beast-gtk/bstmain.c: read beast.glr from beast program data dir.
+
+	* merged ChangeLog and beast-gtk/ChangeLogs.
+
+Sun Jun 27 10:04:46 1999  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstkeytable-de.c: 
+	* beast-gtk/bstkeytable-us.c: 
+	* beast-gtk/bstkeytables.c: restructured source files, more stuff to
+	come.
+
+	* beast-gtk/bstkeytables-us.c: vanished.
+
+Thu Jun 10 05:00:26 1999  Tim Janik  <timj@gtk.org>
+
+	* configure.in (LT_AGE): removed that GNOME version 1.0.2 kludge
+	which worked around broken gnome-libs versioning scheme,
+	require 1.0.10 now.
+
+1999-06-06    <timj@dhcpd7.redhat.com>
+
+	* beast-gtk/bstparam.c: prepare parameters for wrap box container.
+
 1999-05-31    <timj@dhcpd7.redhat.com>
 
 	* configure.in: check for GNOME libs 1.0.2, since 1.0.6 doesn't really
-	match gnome-config --version reporting 1.0.pre-2-10. gnome versioning is
-	what is actually broken and needs to be fixed ;(
-	
+	match gnome-config --version reporting 1.0.pre-2-10. gnome versioning
+	is what is actually broken and needs to be fixed ;(
+
+Mon May 17 02:49:23 1999  Tim Janik  <timj@gtk.org>
+
+	* bunch of Makefile and configure changes so make distcheck works.
+	BEAST package has version 0.2.0 now.
+
+Sat May 15 23:23:05 1999  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstsamplerepo.[hc]: adaptions so we can load samples from
+	$(prefix)/share/beast/v0.2/*, which is where beast-data-0.2.tar.gz
+	installs default samples.
+
+Wed May  5 08:47:51 1999  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstpatterneditor.[hc]: added drag selections, revamped the
+	layout code completely. on the one hand this was long overdue,
+	and on the other it was required for drag selections anyways ;)
+
+Wed May  4 07:52:33 1999  Tim Janik  <timj@gtk.org>
+
+	* We provide som limited BSE Procedure support now, the
+	next step is to dynamically create per-object menu's for
+	for it's procedures. All BEAST windows should now have a
+	status bar at the lower border to keep the user informed
+	on procedure failures and similar things.
+
+Son Apr 25 16:47:21 1999  Tim Janik  <timj@gtk.org>
+
+	* over that past 5 months, pretty much all of the initial BEAST
+	code got revamped to suit the evolving BSE. apart from that, the
+	code had to undergo some serious redoing to work with Gtk+ 1.2,
+	the pattern editor is now only scrollable as a GtkScrolledWindow
+	child.
+	the old dialogs with static GUIs are gone now, we create 90% of
+	the GUI from BSE's generic parameter interface.
+
+Fri May 15 05:12:00 1998  Tim Janik  <timj@gtk.org>
+
+	* lotsa stuff. we have a ~/.beastrc now, a shel, a songshell
+	and an instrument editor.
+
+Mon Apr  6 19:36:45 1998  Tim Janik  <timj@gtk.org>
+
+	* bstpatterneditor.h: 
+	* bstpatterneditor.c: scrolling, keytables.
+
+Thu Apr  2 05:31:37 1998  Tim Janik  <timj@gtk.org>
+
+	* bstpatterneditor.h:
+	* bstpatterneditor.c:
+ 	ok, we have the basic layout working now.
+	keyboard navigation and note editing works as well.
