--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,25 @@
+Thu Jul  1 11:08:02 1999  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstmain.c (main): use new keyboard stuff and guess,
+	yes we are finally able to do that ;)
+
+	* configure.in: check for the neccessary bits so we dno't compile
+	XKB specific code if the extension is not present.
+
+	* beast-gtk/bstxkb.[hc]: special xlib code to figure
+	keyboard type through XKB extension.
+	
+	* beast-gtk/bstkeytables.h:
+	* beast-gtk/bstkeytables.c:
+	* beast-gtk/bstkeytable-base.c:
+	* beast-gtk/bstkeytable-us.c:
+	* beast-gtk/bstkeytable-de.c:
+	revamp, moved the common key codes from us and de into
+	bstkeytable-base.c, implemented keypatch administration that
+	features keyboard aliases and incremental usage of keypatches.
+	the only thing we're lacking now is a GUI front end to choose
+	the keyboard layout (and volounteers to contribute keytables ;).
+
 Sun Jun 27 10:21:57 1999  Tim Janik  <timj@gtk.org>
 
 	* configure.in: provide program data dir for BEAST data files.
