--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,12 @@
+Fri Oct 15 02:09:24 1999  Tim Janik  <timj@gtk.org>
+
+	* bsemain.c (bse_parse_args): added --bse-debug and --bse-no-debug args
+	and featuring of BSE_DEBUG and BSE_NO_DEBUG environment variables.
+
+	* bseobject.c: wrapped up NOTIFY and OBJECTS debugging stuff.
+
+	* bsetype.c: wrapped up CLASSES debugging stuff.
+
 Fri Oct 15 00:20:30 1999  Tim Janik  <timj@gtk.org>
 
 	* icons/Makefile.am: 
