--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Fri Oct 29 11:27:47 1999  Tim Janik  <timj@gtk.org>
+
+	* bseplugin.c: minor const correctness fixes.
+
 Fri Oct 15 02:09:24 1999  Tim Janik  <timj@gtk.org>
 
 	* bsemain.c (bse_parse_args): added --bse-debug and --bse-no-debug args
