--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,11 @@
+Sun Oct 31 16:20:49 1999  Tim Janik  <timj@gtk.org>
+
+	* bsestorage.c (bse_storage_parse_bin_data): eeek, fixed a bad bad bug.
+	we weren't saving/restoring the current parsing position around binary
+	block reads.
+	(bse_storage_ensure_bin_offset): 
+	(bse_storage_restore_offset): retrive/restore current file offset.
+
 Fri Oct 29 11:27:47 1999  Tim Janik  <timj@gtk.org>
 
 	* bseplugin.c: minor const correctness fixes.
