feature channel ids for bst_canvas_source_link_start() and
Sat Nov  6 19:04:06 1999  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstcanvassource.[hc]: feature channel ids for
        bst_canvas_source_link_start() and bst_canvas_source_link_end (),
        keep track of when the source's input/output connections changed.

        * beast-gtk/bstcanvaslink.h: maintain channel ids for input and
        output sources.

        * beast-gtk/bstsnetrouter.c: call bst_canvas_source_update_links()
        for all newly created canvas items, setup a signal connection so
        we can handle the link updating for the csources.

        * beast-gtk/bstcanvassource.[hc]: introduced ::update_links
        signal, to be emitted when the BseSource connections change.

Sat Nov  6 05:58:29 1999  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstsnetshell.c (bst_snet_shell_build): moved most of
        the dynamic snet router creation here, we also setup the zoomed
        window in this place.

        * beast-gtk/bstsnetrouter.[hc]: changed matters, so we derive from
        GnomeCanvas now. removed other non-canvas dependant stuff (we still
        create the toolbar though). indicate toolbar mode through cursor
        change on the canvas.

svn path=/trunk/; revision=44

--- a/ChangeLog
+++ b/ChangeLog
@@ -21,7 +21,7 @@ Sat Nov  6 19:04:06 1999  Tim Janik  <timj@gtk.org>
 	we can handle the link updating for the csources.
 
 	* beast-gtk/bstcanvassource.[hc]: introduced ::update_links
-	signal, to be emitted when the BseSource links changed.
+	signal, to be emitted when the BseSource connections change.
 
 Sat Nov  6 05:58:29 1999  Tim Janik  <timj@gtk.org>
 
