--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,8 @@
+Sun Nov  7 08:12:21 1999  Tim Janik  <timj@gtk.org>
+
+	* bsesnet.c (N_RAND_BLOCKS): uhg, don't kill my speakers with that
+	test sound.
+
 Sun Nov  7 03:05:39 1999  Tim Janik  <timj@gtk.org>
 
 	* bsesnet.[hc]: create a mono input channel.
