--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,10 @@
+Thu Nov 11 03:51:21 1999  Tim Janik  <timj@gtk.org>
+
+	* bsenoise.c: ugh oh, a BseNoise structure amounts to sizeof (BseNoise),
+	not sizeof (BseSource).
+
+	* bsecapture.c: same here (well i copied the basic code ;).
+
 Sun Nov  7 20:48:04 1999  Tim Janik  <timj@gtk.org>
 
 	* bsenoise.[hc]: new noise generator.
